@@ -1,3 +1,10 @@
+Thu Mar  5 11:50:54 2015  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* vm_eval.c (eval_string_with_cref): A binding should keep
+	  refinements activation information and the refinements should be
+	  activated in subsequent eval calls with the binding.
+	  [ruby-core:67945] [Bug #10818]
+
 Thu Mar  5 11:16:55 2015  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* test/ruby/test_refinement.rb: There is no need anymore to supress
